--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: ci
 on: push
 
 jobs:
-  Test:
+  Ubuntu:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
@@ -49,36 +49,6 @@ jobs:
         fail_ci_if_error: true # optional (default = false)
         verbose: true # optional (default = false)
 
-  Ubuntu:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Install Conan
-      id: conan
-      uses: turtlebrowser/get-conan@main
-    
-    - name: Install Deps
-      run: |
-        conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
-        CONAN_SYSREQUIRES_MODE=enabled conan install -if ${{github.workspace}}/build .
-
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release -DCMAKE_MODULE_PATH=${{github.workspace}}/build
-
-    - name: Build
-      # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build
-
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: app
-        path: |
-          ${{github.workspace}}/build/src/glot/glotapp
   
   Windows:
     runs-on: windows-latest
@@ -96,11 +66,17 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}\build -DCMAKE_BUILD_TYPE=Release "-DCMAKE_MODULE_PATH=$('${{github.workspace}}\build' -replace '\\', '/')"
+      run: cmake -B ${{github.workspace}}\build "-DCMAKE_MODULE_PATH=$('${{github.workspace}}\build' -replace '\\', '/')" -DBUILD_TESTS=ON
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}\build
+      run: cmake --build ${{github.workspace}}\build -config Debug
+
+    - name: Test
+      working-directory: ${{github.workspace}}/build
+      # Execute tests defined by the CMake configuration.  
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      run: ctest --verbose
 
     # - name: Archive production artifacts
     #   uses: actions/upload-artifact@v3
